tests/bad/23_missing_condition.src
# Test: Missing condition in if statement
void main() {
    if {  # Missing condition
        return 1;
    }
    return 0;
}
